fixed alignment on figcaption

--- a/public/css/_alignments.scss
+++ b/public/css/_alignments.scss
@@ -37,6 +37,10 @@ main {
     margin-top:65px;
 }
 
+figcaption {
+    text-align:center;
+}
+
 
 
 
